example/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-argocd-test
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: nginx-argocd-test
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nginx-argocd-test
    spec:
      containers:
      - image: nginx:1.15
        name: nginx-argocd-test
        ports:
        - containerPort: 80
          name: web
#        resources:
#          limits:
#            memory: 50Mi
#          requests:
#            memory: 50Mi
        volumeMounts:
          - name: config-vol
            mountPath: /etc/nginx/
      volumes:
        - name: config-vol
          configMap:
            name: nginx-argocd-test
            items:
              - key: nginx.conf
                path: nginx.conf
