example/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-argocd-test
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-argocd-test
